# cutemino

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  fieldmanager.cpp  fieldmanager.h  main.cpp  main.qml  vcpkg.json  views.qrc
.github/workflows/: cmake.yml
assets/: assets.qrc
controllers/: GameController.cpp  GameController.h  GameManager.cpp  GameManager.h
managers/: BaseManager.h  ResourceManager.cc  ResourceManager.h  SettingManager.cc  SettingManager.h
models/: Field.cc  Field.h  Mino.cc  Mino.h
types/: Mino.h
views/: SoloGameStackView.qml  TitleStackView.qml
